<?xml version="1.0"?>
<package format="2"> <!-- 根标记文件 -->
  <name>demo_pkg</name> <!-- 包名 -->
  <version>0.0.0</version> <!-- 版本号 -->
  <description>The demo_pkg package</description> <!-- 内容描述 -->
  <!-- 维护者  -->
  <maintainer email="smile@todo.todo">smile</maintainer>
  <!-- 软件许可证 BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>
  <!-- URL标签是可选的，可以多个，每个标签一个。可选项：网站、错误跟踪器、存储库 -->
  <!-- <url type="website">http://wiki.ros.org/demo_pkg</url> -->
  <!-- 作者标签是可选的，可以多个，每个标签一个。作者可以不是维护者，也可以是 -->
  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->


  <!-- 编译构建工具，通常为catkin  -->
  <!--   <buildtool_depend>catkin</buildtool_depend> -->
  <!-- 指定依赖项为编译、导出、运行需要的依赖，最常用 -->
  <!--   <depend>roscpp</depend> -->
  <!-- 编译依赖项 -->
  <!--   <build_depend>roscpp</build_depend> -->
  <!-- 运行依赖项 -->
  <!--   <exec_depend>roscpp</exec_depend> -->
  <!-- Use build_depend for packages you need at compile time: -->
  <!--   <build_depend>message_generation</build_depend> -->
  <!-- 导出依赖项  -->
  <!--   <build_export_depend>message_generation</build_export_depend> -->
  <!-- 测试用例依赖项 -->
  <!--   <test_depend>gtest</test_depend> -->
  <!-- 文档依赖项 -->
  <!--   <doc_depend>doxygen</doc_depend> -->

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <!-- 导出标记包含其他未指定的标记 -->
  <export>
    <!-- 其他工具可以请求在此处放置其他信息 -->

  </export>
</package>

